client/src/components/MovieCard.scss
.movieCard {
    display: grid;
    grid-template-columns: 135px auto;
    border-radius: 10px;
    background-color: #f4f4f4;
    margin: 5px 2px;
}

.posterContainer {
    align-items: center;
    justify-content: center;
    line-height: 198px;

    .fallbackPoster {
        display: block;
        height: 100%;
        background-color: #ff8561;
        border-radius: 10px;
    }

    img {
        padding: 1px;
        max-height: 200px;
        max-width: 135px;
        border-radius: 10px;
        vertical-align: middle;
    }
}

.infoContainer {
    padding-left: 8px;

    * {
        margin: 1px 0;
    }

    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    height: 190px;
}

.titleRow a {
    display: inline-block;
    max-width: 90%;
    font-size: 20px;
    font-weight: bold;
    text-decoration: none;
    color: black;
    margin-top: 5px;
    line-height: 22px;
}

.rating {
    border: solid 1px lightgrey;
    padding: 0px 4px;
}

.metaDataRow>span:not(:first-of-type):before {
    content: " ‧ ";
}

.amcLogo {
    width: 40px;
    height: 12px;
    padding-top: 3px;
}

.scoresRow {
    display: grid;
    grid-template-columns: 80px auto;
    max-width: 600px;
    margin-top: -4px;
    margin-bottom: -3px;

    .score {
        padding-left: 8px;
        font-size: 15px;
        font-weight: bold;
        vertical-align: top;
    }

    .tomatoCol {
        img {
            width: 30px;
            height: 30px;
        }

        .score {
            display: inline-block;
            margin-top: 6px;
        }
    }

    .imdbCol {
        justify-self: center;
        margin-top: 8px;

        img {
            width: 40px;
            height: 22px;
        }
    }
}

.subInfoContainer {
    position: relative;
    height: 100%;
    overflow-y: hidden;
    cursor: default;
}

.description {
    font-size: 12px;

    @media (max-width: 600px) {
        font-size: 10px;
    }

    padding-right: 5px;
    cursor: pointer;
}

.expandableSection {
    position: absolute;

    &.extraView {
        background-color: #f4f4f4;
        height: 100%;
        animation: .1s slideUp 0s forwards;
        overflow-y: visible;
        line-height: 16px;
        overflow-y: scroll;

        >.description {
            font-size: 12px;
        }
    }
}

.mainView {
    animation: .1s slideDown 0s forwards;
}

.featuredStar {
    color: #ffba00;
    font-size: 20px;
    margin-top: 4px;
    margin-left: 3px;
    position: absolute;
}

// Screen overlay to close and show one setting menu at a time
#overlay {
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0px;
    left: 0px;
}

.openSettingsBtn {
    position: absolute;
    z-index: 1;
    right: 0;
    color: grey;
    font-size: 20px;
    padding-top: 10px;
    padding-right: 10px;
    text-align: right;
    width: 30px;
    display: inline;

    &:hover {
        color: black;
    }
}

.settingsMenu {
    position: relative;
    z-index: 1;

    .actions {
        position: absolute;
        top: 0;
        right: 0;
        margin-top: -30px;
        margin-right: 4px;
        width: 200px;
        box-shadow: -8px 8px 12px 1px #aaaaaa;
        background-color: rgb(235, 235, 235);
    }

    .fas {
        padding-left: 10px;
        padding-right: 20px;
        color: grey;
    }

    button {
        padding: 13px 10px;
        font-size: 16px;
        width: 100%;
        border: none;
        cursor: pointer;
        background-color: white;
        text-decoration: none;
        text-align: left;
        margin: .5px;

        &:hover {
            background-color: #e6fff5;
        }
    }
}

.loadingRing {
    margin-left: 30%;

    span {
        display: block;
        box-sizing: border-box;
        position: absolute;
        width: 64px;
        height: 64px;
        margin: 8px;
        border: 8px solid #fff;
        border-radius: 50%;
        animation: lds-ring .8s cubic-bezier(0.5, 0, 0.5, 1) infinite;
        border-color: lightgrey transparent transparent transparent;
    }

    @keyframes lds-ring {
        0% {
            transform: rotate(0deg);
        }

        100% {
            transform: rotate(360deg);
        }
    }

    @keyframes slideUp {
        10% {
            top: initial;
        }

        50% {
            top: 30%;
        }

        100% {
            top: 0%;
        }
    }

    @keyframes slideDown {
        10% {
            top: 0%;
        }

        50% {
            top: 30%;
        }

        100% {
            top: initial;
        }
    }
}

